WIP: 部分前端组件、实现mock、前后端接口对接、跨域
前端组件：Login界面、header头部
使用express-mockjs模拟数据
引入axios并简单使用
和后端完成简单接口对接

--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "commit": "git add . && git-cz"
+    "commit": "git add . && git-cz",
+    "mock": "nodemon mock/index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
+    "express": "^4.16.4",
+    "express-mockjs": "^0.4.9",
+    "iview": "^3.2.1",
     "jquery": "^3.3.1",
+    "less-loader": "^4.1.0",
     "ramda": "^0.26.1",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -46,12 +55,15 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
+    "express-mockjs": "^0.4.9",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.9.0",
+    "mockjs": "^1.0.1-beta3",
     "node-notifier": "^5.1.2",
+    "nodemon": "^1.18.9",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
