--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.9.0",
     "mockjs": "^1.0.1-beta3",
