--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "element-ui": "^2.4.11",
     "express": "^4.16.4",
     "express-mockjs": "^0.4.9",
+    "highlight.js": "^9.14.1",
+    "highlightjs": "^9.12.0",
     "iview": "^3.2.1",
     "jquery": "^3.3.1",
     "less-loader": "^4.1.0",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "ramda": "^0.26.1",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
     "vuex": "^3.0.1"
@@ -71,6 +77,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "quill-image-extend-module": "^1.1.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -81,7 +88,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.1.0"
   },
   "config": {
