--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "mock": "nodemon mock/index.js"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^2.0.0",
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
+    "emoji-mart-vue": "^2.6.6",
+    "emoji-vue": "^0.2.4",
     "express": "^4.16.4",
     "express-mockjs": "^0.4.9",
     "highlight.js": "^9.14.1",
@@ -27,13 +30,18 @@
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
     "ramda": "^0.26.1",
+    "tinymce": "^4.9.3",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
+    "vue-click-outside": "^1.0.7",
+    "vue-core-image-upload": "^2.4.11",
+    "vue-cropper": "^0.4.8",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -83,6 +91,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-clickoutside": "^0.2.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
