--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-click-outside": "^1.0.7",
     "vue-core-image-upload": "^2.4.11",
     "vue-cropper": "^0.4.8",
+    "vue-loading-template": "^1.3.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
