--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
     "ramda": "^0.26.1",
+    "socket.io-client": "^2.2.0",
     "tinymce": "^4.9.3",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
@@ -41,6 +42,7 @@
     "vue-loading-template": "^1.3.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b",
     "vue-style-loader": "^3.1.2",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1"
@@ -94,6 +96,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-clickoutside": "^0.2.0",
+    "vue-lazyload": "^1.2.6",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
